--- a/Portifolio/estilo.css
+++ b/Portifolio/estilo.css
@@ -60,10 +60,99 @@ p.texto {
     text-align: left;
 
 }
-#foto{
+
+#foto {
     margin-left: 42px;
     border-radius: 50%;
 }
-#foto img{
+
+#foto img {
     width: 50%;
+    margin-left: 42px;
+    border-radius: 20%;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+#buttoncta {
+    width: 180px;
+    height: 48px;
+    top: 504px;
+    left: 160px;
+    gap: 0px;
+    border-radius: 50px;
+    opacity: 0px;
+    background: #f75a10;
+    font-family: Poppins;
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    padding: 10px 50px 10px 50px;
+
+}
+
+#clientes {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#cabecalhoclientetexto {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: left;
+
+}
+
+#cabecalhologo {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#Black {
+    font-family: Poppins;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 54px;
+    text-align: center;
+
+}
+
+#red {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: center;
+    color: #f75a10;
+}
+
+.gray {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: center;
+
+}
+#texto{
+    font-family: Poppins;
+font-size: 20px;
+font-weight: 600;
+line-height: 30px;
+text-align: center;
+
+}
+#texto2{
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 32px;
+text-align: center;
+
 }
